sass/partials/types/_select.scss
.filter-box {
	.field-item-input {
		border-radius: #{10/14 * $base-fontSize}/#{25/14 * $base-fontSize};

		input {
			position: relative;
			width: 100%;
			cursor: text;
		}

		.fb-icon-search {
			position: absolute;
			right: .4em;
			font-size: $base-fontSize;
			cursor: default;
			pointer-events: none;
		}
	}

}

.select-box {
	.field-item-input, input {
		cursor: pointer;
	}

	.shim {
		position: absolute;
		top: 0;
		left: 0;

		width: 100%;
		height: 100%;
		text-align: middle;
		padding-left: $inputField-fieldText-horizontalPadding;
		
		overflow: hidden;

		font-family: sans-serif;
	}

	> .field-items {
		background-color: #ffffff;
		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#eeeeee', GradientType=0 );
		background-image: linear-gradient(#ffffff 20%, #f6f6f6 50%, #eeeeee 52%, #f4f4f4 100%);
	}


}

.fb-select-panel {
	left: 0;
	position: absolute;
	z-index: 100;
	overflow: hidden;

	background: $base-background;
	background-clip: padding-box;
	box-shadow: 0 3px 8px rgba(0,0,0,0.4);

	border: 1px solid #707070;
	border-top: 1px solid #B6B6B6;
	border-radius: 0 0 4px 4px;

	font-size: $base-fontSize;
	cursor: default;
	

	.options {
		cursor: pointer;
		overflow: auto;
		max-height: $select-dropdown-maxHeight;
		
	}

	.filtered {
		display: none;
	}
	

	&.filtering .option {
		color: #eee;
	}

	.option {
		padding: .25em;
		cursor: pointer;

		&.selected {
			background-color: $select-hoverBackgroundColor-light;
			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr=#{'\''}$select-hoverBackgroundColor-light#{'\''}, endColorstr=#{'\''}$select-hoverBackgroundColor-dark#{'\''}, GradientType=0 );
			background-image: linear-gradient($select-hoverBackgroundColor-light 20%, $select-hoverBackgroundColor-dark 90%);
			color: $select-hoverTextColor;
		}

	}

	
}

.tms-select-dropdown-content {
	padding: $base-padding;
}


.dropdown-open-icon {
	position: absolute;
	top: .25em;
	right: $select-iconPaddingRight;
}

.dropdown-closed-icon {
	position: absolute;
	top: -.2em;
	right: $select-iconPaddingRight;
}

